<resources>
    <string name="app_name">BloodUp</string>
    <string name="welcome_to_bloodup">Welcome To BloodUp</string>
    <string name="save_life">Donate one time, save one life!</string>
    <string name="blood_donors_amp_blood_donation"><![CDATA[Blood Donors & Blood Donation]]></string>
    <string name="who_can_give_blood">Who can give blood?</string>
    <string name="bloodtype">BloodType</string>
    <string name="processlist">ProcessList</string>
    <string name="donation_process">Donation Process</string>
    <string name="afterprocesslist">afterProcessList</string>
    <string name="after_procedure">After procedure</string>
    <string name="generalinfo">GeneralInfo</string>
    <string name="general_information">General Information</string>
    <string name="check">check</string>
    <string name="android_name">Android Name</string>
    <string name="blood_donation_after_process">Blood Donation After Process</string>
    <string name="back">Back</string>
    <string name="types_of_blood_donation">Types of Blood Donation:</string>
    <string name="whole_blood">Whole Blood</string>
    <string name="platelets">Platelets</string>
    <string name="plasma">Plasma</string>
    <string name="double_red_cells">Double Red Cells</string>
    <string name="autologous_donation">Autologous Donation</string>
    <string name="directed_donation">Directed Donation</string>
    <string name="giving_the_right_type_of_blood_donation_based_on_your_blood_type_and_patient_needs_helps_ensure_the_best_use_of_your_valuable_contribution_here_are_some_things_to_consider_when_determining_how_you_can_have_the_most_impact">Giving the right type of blood donation - based on your blood type and patient needs - helps ensure the best use of your valuable contribution. Here are some things to consider when determining how you can have the most impact.</string>
    <string name="logo">logo</string>
    <string name="blood_donation_process">Blood Donation Process</string>
    <string name="select_location">Select location</string>
    <string name="find_a_donor">Find A Donor</string>
    <string name="select_the_blood_type">Select the blood type</string>
    <string name="diabetic">Diabetic?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="blood_presure">Blood Presure?</string>
    <string name="blood_type">Blood Type</string>
    <string name="sign_up">Sign Up</string>
    <string name="be_a_donor">Be a Donor</string>
    <string name="join_as_hospital">Join as Hospital</string>
    <string name="it_s_time_to_join_us">It\'s time to join us!</string>
    <string name="hospital_issues">Hospital Issues</string>
    <string name="searching">searching</string>
    <string name="alldonors">AllDonors</string>
    <string name="see_all_donors">See all Donors</string>
    <string name="let_s_start">Let\'s Start!</string>
    <string name="donors">Donors</string>
    <string name="donors_results">Donors Results</string>
    <string name="start_over">Start Over</string>
    <string name="back_to_welcome_page">Back to welcome page?</string>
    <string name="a_post_graduate_student_of_the_informatics_department_of_aristotle_university_created_bloodup_a_blood_donation_app_in_order_to_help_people_and_hospital_with_this_process">A post-graduate student of the Informatics Department of Aristotle University created BloodUp, a blood donation app in order to help people and hospital with this process.</string>
    <string name="about_us">About Us</string>
    <string name="not_yet_registered_signup">Not yet registered? Signup</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="who_can_donate">Who can donate?</string>
    <string name="spalsh">Spalsh</string>

    <string-array name="bloodType">
        <item>Select Blood Type</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>
    <string-array name="Location">
        <item>Select Location</item>
        <item>Toumba</item>
        <item>Kentro</item>
        <item>Pylaia</item>
        <item>Asvestoxwri</item>
        <item>Eksoxi</item>
    </string-array>
</resources>