<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blood_background"
    android:orientation="vertical"
    tools:context=".WelcomePage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:padding="20dp">

        <Button
            android:id="@+id/be_a_donor_button"
            android:layout_width="187dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:backgroundTint="#E80202"
            android:onClick="donorChoice"
            android:text="@string/be_a_donor"
            android:textColor="#F6F2F2"
            android:textSize="18sp" />

        <Button
            android:id="@+id/be_a_hospital_button"
            android:layout_width="191dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:backgroundTint="#E80202"
            android:onClick="hospitalChoice"
            android:text="@string/join_as_hospital"
            android:textColor="#F6F2F2"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/joinUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="72dp"
        android:gravity="center"
        android:text="@string/it_s_time_to_join_us"
        android:textColor="@color/red"
        android:textSize="21sp"
        android:textStyle="italic"
        tools:ignore="UnknownId" />

</RelativeLayout>